<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/myColorBackground"
        tools:context=".features.bottomtab.settings.SettingsFragment">

        <!--<include
            android:id="@+id/include6ww"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolBarBack"
            android:gravity="center"
            android:text="@string/tab_settings"
            android:textColor="@color/myColorForeground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_feedback_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/myColorDarkGray"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/settings_feedback"
                    android:textColor="@color/myColorForeground"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_show_waver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:padding="15dp"
                    android:text="@string/settings_show_waiver"
                    android:textColor="@color/myColorForeground"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_feedback_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_feedback_title"
                    tools:ignore="RtlSymmetry" />

                <!--<View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/myColorDarkGray"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/item_show_waver"
                    app:layout_constraintStart_toStartOf="@+id/item_show_waver"
                    app:layout_constraintTop_toBottomOf="@+id/item_show_waver" />-->

                <TextView
                    android:id="@+id/tv_intro_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/myColorDarkGray"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/settings_introduction"
                    android:textColor="@color/myColorForeground"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/item_show_waver"
                    app:layout_constraintTop_toBottomOf="@+id/item_show_waver" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_show_featureintroduction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_intro_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_intro_title">

                    <ImageView
                        android:id="@+id/iv_tutorial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_tutorial"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/settings_tutorial"
                        android:textColor="@color/myColorForeground"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_tutorial"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:ignore="RtlSymmetry" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view6"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/myColorDarkGray"
                    app:layout_constraintEnd_toEndOf="@+id/item_show_featureintroduction"
                    app:layout_constraintStart_toStartOf="@+id/item_show_featureintroduction"
                    app:layout_constraintTop_toBottomOf="@+id/item_show_featureintroduction" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_contact_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_intro_title"
                    app:layout_constraintTop_toBottomOf="@+id/item_show_featureintroduction">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_web"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/settings_contact_closest_office"
                        android:textColor="@color/myColorForeground"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_contact_for_questions"
                        android:textSize="15sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/textView15" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view7"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/myColorDarkGray"
                    app:layout_constraintEnd_toEndOf="@+id/item_contact_settings"
                    app:layout_constraintStart_toStartOf="@+id/item_contact_settings"
                    app:layout_constraintTop_toBottomOf="@+id/item_contact_settings" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_feedback_setting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/item_contact_settings"
                    app:layout_constraintStart_toStartOf="@+id/item_contact_settings"
                    app:layout_constraintTop_toBottomOf="@+id/view7">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_feedback"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/settings_send_app_feedback"
                        android:textColor="@color/myColorForeground"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view8"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/myColorDarkGray"
                    app:layout_constraintEnd_toEndOf="@+id/item_feedback_setting"
                    app:layout_constraintStart_toStartOf="@+id/item_feedback_setting"
                    app:layout_constraintTop_toBottomOf="@+id/item_feedback_setting" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_rate_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/item_feedback_setting"
                    app:layout_constraintStart_toStartOf="@+id/item_feedback_setting"
                    app:layout_constraintTop_toBottomOf="@+id/view8">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_rate"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/settings_rate_on_google_play"
                        android:textColor="@color/myColorForeground"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:id="@+id/view9"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/myColorDarkGray"
                    app:layout_constraintEnd_toEndOf="@+id/item_rate_settings"
                    app:layout_constraintStart_toStartOf="@+id/item_rate_settings"
                    app:layout_constraintTop_toBottomOf="@+id/item_rate_settings" />


                <TextView
                    android:id="@+id/itemversionnumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/myColorForeground"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view9"
                    tools:text="v1.1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>