<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.navfac.usace.safety.features.bottomtab.home.HomeViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:paddingHorizontal="20dp"
            tools:context=".features.bottomtab.home.HomeFragment">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/shape_searchbox"
                android:translationZ="1.2dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:id="@+id/search_edittext_table"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_search"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:minLines="1"
                    android:onTextChanged="@{(text,start,before,count) -> viewmodel.onSearch(text)}"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnAudio"
                    app:layout_constraintStart_toEndOf="@+id/btnSearch"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="123" />

                <ImageView
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_bottombar"
                    app:tint="@color/colorBlack" />

                <ImageView
                    android:id="@+id/btnAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_microphone_asset"
                    app:tint="@color/colorBlack" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@color/myColorBackground"
                android:scrollbars="vertical"
                android:translationZ="1dp"
                android:visibility="@{viewmodel.query.length() == 0? View.GONE: View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout"
                tools:visibility="gone" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginBottom="-4dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:progressBackgroundTint="@color/colorPrimaryDark"
                android:progressTint="@color/colorPrimaryDark"
                android:visibility="@{viewmodel.showSearchProgress? View.VISIBLE: View.GONE}"
                app:elevation="10dp"
                app:layout_constraintTop_toTopOf="@+id/rv_search_result" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_empty"
                android:layout_width="@dimen/icon_xxlarge"
                android:layout_height="@dimen/icon_xxlarge"
                android:visibility="@{viewmodel.query.length() > 0 &amp;&amp; viewmodel.queryResult.size() == 0? View.VISIBLE: View.GONE}"
                app:elevation="10dp"
                app:layout_constraintBottom_toTopOf="@id/tv_empty_search_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_search_bottombar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_empty_search_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/lbl_search_empty"
                android:textAlignment="center"
                android:visibility="@{viewmodel.query.length() > 0 &amp;&amp; viewmodel.queryResult.size() == 0? View.VISIBLE: View.GONE}"
                app:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_empty" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/helveticaneue_heavy"
                android:text="@string/home_logo1"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue_heavy"
                android:text="@string/home_logo2"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:text="@string/app_intro_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/app_intro_subtitle"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_menu"
                android:layout_width="350dp"
                android:layout_height="189dp"
                android:layout_marginEnd="-70dp"
                android:layout_marginBottom="-10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.819"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/home_footer"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/sf_pro_display_semibold_italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:srcCompat="@drawable/ic_registered_trademark" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>